details of sleep tracking record

--- a/app/src/main/res/layout/list_item_sleep_night.xml
+++ b/app/src/main/res/layout/list_item_sleep_night.xml
@@ -4,8 +4,11 @@
     <data>
         <variable name="sleep"
                   type="com.alyjak.sleeptracker.database.SleepNight"/>
+        <variable name="clickListener"
+                  type="com.alyjak.sleeptracker.sleeptracker.SleepNightListener"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
+            android:onClick="@{() -> clickListener.onClick(sleep)}"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -16,12 +19,11 @@
                 android:layout_height="60dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
                 app:sleepImage="@{sleep}"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:srcCompat="@drawable/ic_sleep_5"/>
+                tools:srcCompat="@drawable/ic_sleep_5" app:layout_constraintBottom_toTopOf="@+id/sleep_length"
+                android:layout_marginBottom="8dp"/>
 
         <TextView
                 android:id="@+id/quality_string"
@@ -37,15 +39,13 @@
         <TextView
                 android:id="@+id/sleep_length"
                 android:layout_width="0dp"
-                android:layout_height="20dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 app:sleepDurationFormatted="@{sleep}"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/quality_image"
-                app:layout_constraintTop_toTopOf="@+id/quality_image"
-                tools:text="Wednesday"/>
+                tools:text="Wednesday" app:layout_constraintTop_toBottomOf="@+id/quality_image"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
